--- a/style/style.css
+++ b/style/style.css
@@ -2454,8 +2454,16 @@ h1 {
     align-items: center;
     justify-content: space-between;
 }
-
-
+.bunnerImgSupport {
+    width: 100%;
+}
+.bunnerRegistration img {
+    width: 100%;
+}
+.fromAreasTabsRegitstration {
+    flex-direction: column;
+    align-items: flex-start;
+}
 
 
 
@@ -3042,7 +3050,7 @@ header {
     padding-left: 0 !important;
 }
 .fromAreasTabsContainerLeft  {
-    width:80% !important;
+    width:100% !important;
 }
 .fromAreasTabsContainer {
     position: absolute;
@@ -3254,6 +3262,11 @@ header {
     position: relative;
     z-index: 10;
 }
+.tabsPositionSvg .closeSvgBlog{
+    position: absolute;
+    top: 20px;
+    right: 20px
+}
 .fromAreasTabsRegitstration.activeBlog {
     position: fixed;
     display: flex;
@@ -3261,7 +3274,6 @@ header {
     box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
     background: #FFF5F2;
     border-radius: 24px;
-    border: 1px solid #181739;
 }
 .fromAreasTabsContainer.activeBlog {
     position: fixed;
@@ -3288,12 +3300,39 @@ header {
 }
 .fromAreasTabsContainer svg {
     display: block !important;
-    position: absolute;
-    top: 20px;
-    right: 20px;
 }
 .fromAreasTabsContainer.activeBlog {
     flex-direction: row !important;
+}
+.bunnerRightSupport {
+    height: 570px;
+}
+.suportbunnerLeft {
+    margin-bottom: 50px;
+}
+.supportFormSubmit {
+    width: 140px !important;
+}
+.servicesSliderContainer {
+    width: 100% !important;
+}
+.aboutMaxwiseClientsImg .slick-list .slick-track .slick-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.bunnerRightRegistration {
+    height: 450px !important;
+}
+.fromAreasTabsRegitstration.activeBlog {
+    flex-direction: column !important;
+    padding-top: 16px !important;
+}
+.fromAreasTabsRegitstration .closeSvgBlog {
+    display: block !important;
+    width: 26px;
+    min-height: 26px;
+    margin-left: auto;
 }
 }
 @media(max-width: 767px) {
@@ -3392,6 +3431,9 @@ header {
     }
     .fromAreasTabsContainerLeft {
         margin-right: 0;
+    }
+    .fromAreasTabsContainer {
+        padding-top: 16px !important;
     }
     .desctopImg{
         display: none !important;
@@ -3733,10 +3775,18 @@ header {
         width: 20px;
         height: 20px;
     }
-
-}
-@media (max-width: 1350px) {
-    .transformSection .wrapper {
+    .fromAreasTabsContainer.activeBlog {
+        flex-direction: column-reverse !important;
+    }
+    .fromAreasTabsContainer.activeBlog {
+        padding-top: 16px !important;
+        box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
+        border-radius: 8px;
+    }
+    .fromAreasTabsRegitstration.activeBlog {
+        flex-direction: column !important;
+    }
+    .wrapper {
         justify-content: flex-start;
         padding-right: 0;
     }
@@ -3798,6 +3848,37 @@ header {
     .blogSliderNext {
         top: 23%;
         right: 33px;
+    }
+    .tabsPositionSvg .closeSvgBlog {
+        position: static !important;
+    }
+    .blogSliderPrev {
+        position: static !important;
+        transform: unset !important;
+    }
+    .blogTop {
+        margin-bottom: 64px;
+    }
+    .sliderContainerblog {
+        margin-top: 0;
+    }
+    .blogContent  {
+        padding-top: 0;
+    }
+    .fromAreasTabsContainerLeft {
+        min-width: 100%;
+    }
+    .blogSliderArrow {
+        display: flex;
+        justify-content: flex-end;
+        padding: 0 64px;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
+    .blogSliderNext {
+        position: static !important;
+        transform: unset !important;
+        margin-left: 16px;
     }
 }
 @media(min-width: 1900px) {
