--- a/style/style.css
+++ b/style/style.css
@@ -2477,6 +2477,169 @@ h1 {
 .toggle {
     display: flex;
 }
+.postTabs {
+    background: url(../img/noise.png),#FFF5F2;
+    background-repeat: repeat;
+    background-size: auto;
+    width: 100%;
+    padding-top: 32px;
+}
+.postTabs .wrapper {
+    align-items: flex-start !important;
+}
+.postTabsLeft h2 {
+    font-weight: 700;
+    font-size: 42px;
+    line-height: 130%;
+    color: #343243;
+    margin-bottom: 32px;
+}
+.postTabsLeft {
+    width: 23%;
+    margin-right: 55px;
+}
+.postTabsFormS .wrapper {
+    align-items: center !important;
+}
+.postTabsLeft .tabs {
+    width: 90%;
+}
+.postTabsLeft .tabs li a {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 150%;
+    color: #9A97AE;
+    padding: 14px 0 14px 0;
+    text-align: left;
+}
+.postTabsLeft .tabs li svg {
+    min-width: 22px;
+    min-height: 12px;
+}
+.postTabsRight {
+    height: 100%;
+    width: 65%;
+    overflow: hidden;
+}
+.postContent {
+    display: flex;
+    width: 100%;
+}
+.postContentScroll h3 {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 150%;
+    color: #646278;
+    margin-bottom: 24px;
+}
+.postContentScroll p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 180%;
+    color: #646278;
+    margin-bottom: 24px;
+}
+.postContentScrollCard {
+    display: flex;
+    justify-content: space-between;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 8px;
+    width: 55%;
+    height: 126px;
+    box-sizing: border-box;
+    margin: 0 auto 24px auto;
+}
+.postContentScrollCard img {
+    max-width: 100%;
+    border-radius: 0 8px 8px 0;
+}
+.postContentScrollCardLeft {
+    padding: 16px;
+    box-sizing: border-box;
+    width: 75%;
+}
+.postContentScrollCardLeft h4 {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 150%;
+    color: #343243;
+    margin-bottom: 16px;
+}
+.postContentScrollCardLeft p {
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    color: #343243;
+}
+.borderLeft {
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 150%;
+    color: #646278;
+    padding-left: 32px;
+    border-left: 5px solid #F7B8A5;
+}
+.postContentScroll {
+    height: 100%;
+    width: 100%;
+    min-width: 90%;
+    overflow: scroll;
+    overflow-x: hidden;
+    padding-right: 20px;
+}
+.postContentRight {
+    width: 35%;
+}
+.postTabsContentCenter {
+    display: flex;
+    align-items: flex-start;
+    width: 77%;
+    padding-bottom: 64px;
+}
+.postTabsForm {
+    width: 35%;
+}
+.postTabsFormS form{
+    display: flex;
+    flex-direction: column;
+}
+.postTabsFormS .wrapper {
+    max-width: 100%;
+}
+.postTabsForm img {
+    max-width: 100%;
+    width: 100%;
+    margin-bottom: 24px;
+}
+.postTabsFormS {
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 8px;
+    padding: 64px 32px;
+    box-sizing: border-box;
+}
+.postTabsFormS .wrapper h2 {
+    font-weight: 700 !important;
+    font-size: 24px;
+    line-height: 140%;
+    text-align: center;
+    color: #292929;
+    width: 60%;
+}
+.postTabsFormS .wrapper p {
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    text-align: center;
+    color: rgba(18, 17, 39, 0.56);
+    width: 80%;
+}
+.postTabsFormS .wrapper form {
+    width: 100% !important;
+}
+.postTabsFormS .wrapper form div {
+    margin-bottom: 16px;
+}
+
 
 
 
@@ -3608,6 +3771,7 @@ header {
         margin-top: 0;
         width: 100%;
         margin-bottom: 0;
+        padding:  64px 0 !important;
     }
     .blogSliderNext  {
         right: -10px !important;
@@ -3883,7 +4047,7 @@ header {
         width: 100%;
     }
     .transformSliderDots .slick-dots {
-        max-width: 50%;
+        max-width: 100%;
     }
     .transformSection {
         max-width: 100%;
@@ -3972,7 +4136,8 @@ header {
         padding-left: 0 !important;
     }
     .blogContent {
-        padding-bottom: 160px;
+        padding-bottom: 0px;
+        background: #FFF5F2 !important;
     }
     .pagination {
         left: 50% !important;
