--- a/style/style.css
+++ b/style/style.css
@@ -964,6 +964,7 @@ h1 {
     align-items: flex-start;
     min-width: 480px;
     margin-right: 24px;
+    width: 50%;
 }
 .fromAreasTabsContainerRight img{
     width: 100%;
