--- a/style/style.css
+++ b/style/style.css
@@ -3052,7 +3052,7 @@ h1 {
     margin-top: 0;
 }
 .blogContent {
-    padding-bottom: 100px;
+    padding-bottom: 0;
 }
 .bunnerLeft {
     width: 100%;
@@ -3587,6 +3587,13 @@ header {
     .bunner .wrapper .bunnerLeft{
         width: 100%;
         padding: 0 23px;
+        box-sizing: border-box;
+    }
+    header {
+        left: 0;
+        transform: unset;
+        max-width: 100%;
+        padding: 0 16px;
         box-sizing: border-box;
     }
     .showContainer  {
