--- a/style/style.css
+++ b/style/style.css
@@ -41,9 +41,6 @@ a {
     align-items: center;
     justify-content: space-between;
 }
-.showContainer button {
-    transition: all 0.3s;
-}
 .showContainer button:hover {
     background: #F7B8A5;
     transition: all 0.3s;
@@ -51,10 +48,6 @@ a {
 .showContainer button:active {
     background: #EEA088;
     transition: all 0.3s;
-}
-.bunnerLeftBtn {
-    transition: all 0.3s;
-    border: 1px solid transparent;
 }
 .bunnerLeftConsultation {
     padding: 14px 32px;
@@ -88,6 +81,8 @@ a {
     padding: 14px 32px;
     border: 1px solid rgba(30, 29, 40, 0.12);
     border-radius: 64px;
+    transition: all 0.3s;
+    border: 1px solid transparent;
 }
 .burger {
     display: none;
@@ -314,6 +309,7 @@ a {
     display: flex;
     align-items: center;
     border: none;
+    transition: all 0.3s;
 }
 .showContainer button::after {
     content: "";
@@ -1595,6 +1591,7 @@ h1 {
 .footerBottom ul {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .footerBottom ul li a {
     text-decoration: none;
@@ -2605,6 +2602,8 @@ h1 {
     height: 126px;
     box-sizing: border-box;
     margin: 0 auto 24px auto;
+    transition: all 0.3s;
+    cursor: pointer;
 }
 .postTabsLeft .tabs li.active a{
     color: #AF5033;
@@ -2862,6 +2861,8 @@ h1 {
     align-items: center;
     background: rgba(255, 255, 255, 0.5);
     border-radius: 8px;
+    transition: all 0.3s;
+    cursor: pointer;
 }
 .otherArticlesContentItem img {
     max-width: 100%;
@@ -2873,6 +2874,7 @@ h1 {
     width: 205px;
     line-height: 150%;
     color: #343243;
+    transition: all 0.3s;
     height: 136px;
     overflow: hidden;
     padding: 32px;
@@ -2911,6 +2913,43 @@ h1 {
 .otherArticlesContent {
     width: 100%;
 }
+.otherArticlesContentItem:hover {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    transition: all 0.3s;
+}
+.otherArticlesContentItem:hover h3 {
+    color: #CD6C4F;
+    transition: all 0.3s;
+}
+.postContentScrollCard:hover {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    transition: all 0.3s;
+}
+.postContentScrollCard:hover h4 {
+    color: #CD6C4F;
+    transition: all 0.3s;
+}
+.postTabsLeft .tabs li:hover a {
+    color: #CD6C4F;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
