--- a/style/style.css
+++ b/style/style.css
@@ -2515,6 +2515,9 @@ h1 {
 .bunnerImgSupport {
     width: 100%;
 }
+.bunnerImgSupport img {
+    width: 100%;
+}
 .bunnerRegistration img {
     width: 100%;
 }
