--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,21 @@ body {
 button {
     font-family: 'Poppins', sans-serif;
 } 
+header .wrapper ul li {
+    transition: all 0.3s;  
+    border: 2px solid transparent;
+}
+header .wrapper ul li:hover {
+    background: rgba(30, 29, 40, 0.04);
+    border-radius: 32px;
+    padding: 6px 20px;
+    transition: all 0.3s;
+}
+header .wrapper ul li:active {
+    background: rgba(30, 29, 40, 0.04);
+    border: 2px solid rgba(30, 29, 40, 0.12);
+    border-radius: 32px;
+}
 .aboutMaxwiseClientsImgItem {
     display: flex !important;
     align-items: center;
@@ -422,7 +437,20 @@ header .wrapper > ul li a:nth-last-of-type(1) {
     font-size: 17px;
     line-height: 150%;
     color: #1E1D28;
-    text-decoration: none
+    text-decoration: none;
+    transition: all 0.3s;
+}
+.headerCall:hover {
+    transition: all 0.3s;
+    background: rgba(30, 29, 40, 0.04);
+    border: 1px solid rgba(30, 29, 40, 0.12);
+    border-radius: 64px;
+}
+.headerCall:active {
+    transition: all 0.3s;
+    background: rgba(30, 29, 40, 0.04);
+    border: 1px solid rgba(30, 29, 40, 0.12);
+    border-radius: 64px;
 }
 .bunner .wrapper .bunnerLeft{
     display: flex;
@@ -3963,7 +3991,8 @@ header {
     object-position: right;
 }
 .fromAreasTabsContainerLeft {
-    min-width: 80%;
+    min-width: 50%;
+    justify-content: center;
 }
 .blogSliderArrow {
     display: flex;
@@ -4142,6 +4171,19 @@ header {
     .fromAreasTabsContainer {
         padding-top: 16px !important;
     }
+    .showContainer.showContainerAnimation {
+        animation: bottom-animation 0.6s;
+        transform: translateY(0);
+        transform: translateX(0);
+    }
+    @keyframes bottom-animation {
+        0% {
+            transform: translateY(100%);
+        }
+        100% {
+              transform: translateY(0);
+        }
+  }
     .desctopImg{
         display: none !important;
     }
