--- a/style/style.css
+++ b/style/style.css
@@ -2137,9 +2137,6 @@ h1 {
     display: flex;
     margin-left: 12px;
 } 
-.suportRightArea {
-    left: 40% !important;
-}
 .fromAreasTabsContainerRight {
     height: 100%;
 }
@@ -2973,16 +2970,43 @@ h1 {
 .tabsImg {
     display: none;
 }
-
-
-
-
-
-
-
-
-
-
+.suportRightArea {
+    position: static !important;
+    left: 0 !important;
+    width: 70%;
+}
+.suportRightArea .fromAreasTabsContainer .fromAreasTabsContainerRight .desctopImg {
+    position: absolute;
+    top: 0;
+    object-fit: none;
+    object-position: -100px;
+}
+.fromAreasSuport {
+    padding: 0;
+}
+.fromAreasSuportLeft {
+    padding: 50px 0;
+}
+.fromAreasSuport .wrapper {
+    align-items: flex-start;
+}
+.fromAreasSuport .wrapper .fromAreasLeft {
+    margin-top: 200px;
+}
+.suportRightArea {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    min-height: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.faq .wrapper {
+    align-items: flex-start;
+}
+.faqLeft {
+    margin-top: 300px;
+}
 
 
 
@@ -3050,6 +3074,9 @@ h1 {
 .otherArticlesSliderDots .slick-dots {
     max-width: 100%;
 }
+.suportRightArea .fromAreasTabsContainer .fromAreasTabsContainerRight .desctopImg {
+    position: static;
+} 
 .postTabsForm img {
     display: none;
 }
@@ -4173,20 +4200,24 @@ header {
     }
     .showContainer {
         transform: translateX(0) !important;
-        transform: translateY(100%) !important;
+        transform: translateY(100vh) !important;
         animation: bottom-animation 0.6s;
+        opacity: 0;
     }
     .showContainer.showContainerAnimation {
         animation: bottom-animation 0.6s;
         transform: translateX(0);
+        opacity: 1;
         transform: translateY(0) !important;
     }
     @keyframes bottom-animation {
         0% {
-            transform: translateY(100%);
+            transform: translateY(100vh);
+            opacity: 0;
         }
         100% {
               transform: translateY(0);
+              opacity: 1;
         }
   }
     .desctopImg{
@@ -4705,8 +4736,9 @@ header {
     .showContainerFull {
         width: 100%;
     }
-    .showContainerAnimation {
-        transform: translateX(-5%);
+    .showContainer.showContainerAnimation {
+        left: 5%;
+        right: 5%;
     }
     .transformSectionLeft h4 {
         width: 100% !important;
