--- a/style/style.css
+++ b/style/style.css
@@ -812,6 +812,37 @@ h1 {
 .paginationNumber button:nth-last-of-type(1) {
     margin-right: 16px;
 }
+.paginationNumber {
+    display: flex;
+}
+.blogSection button:hover {
+    background: rgba(30, 29, 40, 0.04);
+    transition: all 0.3s;
+    border-radius: 32px;
+    
+}
+.blogSection button {
+    border: 2px solid transparent !important;
+    transition: all 0.3s;
+}
+.blogSection button:active {
+    background: rgba(30, 29, 40, 0.04);
+    border: 2px solid rgba(30, 29, 40, 0.12) !important;
+    transition: all 0.3s;
+    border-radius: 32px;
+}
+.blogContentParent > div:hover {
+    box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.15);
+    transition: all 0.3s;
+    cursor: pointer;
+}
+.blogContentParent > div:hover h3{
+    color: #CD6C4F;
+    transition: all 0.3s;
+}
+.pagination {
+    margin: 20px 0;
+}
 .paginationNumber button {
     padding: 6px 13px;
     background: #E1876C;
@@ -821,6 +852,9 @@ h1 {
     line-height: 150%;
     color: #F4F2FF;
     border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 34px;
     height: 33px;
     margin-right: 8px;
@@ -3040,9 +3074,14 @@ h1 {
 .fromAreas2 .wrapper .fromAreasLeft {
     width: 100%;
 }
-
-
-
+.bunnerLeftConsultation:hover {
+    transition: all 0.3s;
+    background: #F7B8A5;
+}
+.bunnerLeftConsultation:active {
+    transition: all 0.3s;
+    background: #EEA088;
+}
 
 
 
@@ -4079,6 +4118,10 @@ header {
         width: 100%;
         padding: 0 23px;
         box-sizing: border-box;
+    }
+    .postContentScrollCard {
+        margin-left: 0 !important;
+            height: auto;
     }
     .blogContentBack {
         padding-bottom: 200px !important;
