--- a/style/style.css
+++ b/style/style.css
@@ -3082,7 +3082,10 @@ h1 {
     transition: all 0.3s;
     background: #EEA088;
 }
-
+.fromAreasScroll {
+    display: flex;
+    align-items: center;
+}
 
 
 
@@ -4119,6 +4122,18 @@ header {
         padding: 0 23px;
         box-sizing: border-box;
     }
+    .fromAreasScroll {
+        overflow: scroll;
+        height: 75vh;
+        width: 100%;
+        background: #FFF5F2;
+        border-radius: 24px 24px 0 0;
+        box-sizing: border-box;
+        padding: 32px 16px;
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column-reverse;
+    }
     .postContentScrollCard {
         margin-left: 0 !important;
             height: auto;
@@ -4235,7 +4250,6 @@ header {
         background: #FFF5F2;
         border-radius: 24px;
         padding:32px 16px;
-        overflow-y: scroll;
         height: 70vh;
         box-sizing: border-box;
     }
@@ -4771,17 +4785,18 @@ header {
 .fromAreasTabsContainer {
     background: #FFF5F2;
     border-radius: 24px;
-    padding:32px 16px;
+    padding:0;
     overflow-y: scroll;
-    height: 70vh;
+    height: 100vh;
     box-sizing: border-box;
+    background: rgba(0,0,0, 0.5);
 }
 .fromAreasTabsContainer.activeBlog {
     position: fixed;
     display: flex;
     box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
-    background: #FFF5F2;
-    border-radius: 24px 24px 0 0;
+    background: rgba(0,0,0, 0.9);
+    border-radius: 0;
     width: 100%;
     flex-direction: column-reverse;
     align-items: center;
