--- a/style/style.css
+++ b/style/style.css
@@ -3058,7 +3058,7 @@ h1 {
     top: -64px;
 }
 .fromAreasPosition {
-    position: relative;
+    position: static;
     left: 60px !important;
 }
 .fromAreas2 .wrapper{
@@ -3066,10 +3066,6 @@ h1 {
 }
 .fromAreas2 {
     display: flex;
-}
-.fromAreasPosition {
-    position: relative;
-    left: 60px !important;
 }
 .fromAreas2 .wrapper .fromAreasLeft {
     width: 100%;
@@ -3085,8 +3081,15 @@ h1 {
 .fromAreasScroll {
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 70%;
 }
-
+.fromAreasTabsContainerRight {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 40%;
+}
 
 
 
@@ -4110,6 +4113,9 @@ header {
 .fromAreasRightSupport .fromAreasTabsContainer .fromAreasTabsContainerLeft  {
     width: 70% !important;
 }
+.fromAreasTabsContainerLeft {
+    max-width: 55%;
+}
 }
 @media(max-width: 991px) {
     .footerMap {
@@ -4625,6 +4631,8 @@ header {
     }
     .fromAreasTabsContainer.activeBlog {
         flex-direction: column-reverse !important;
+        bottom: 0;
+        z-index: 100;
     }
     .fromAreasTabsContainer.activeBlog {
         padding-top: 16px !important;
@@ -4790,6 +4798,8 @@ header {
     height: 100vh;
     box-sizing: border-box;
     background: rgba(0,0,0, 0.5);
+    transform: translateY(100vh) !important;
+    animation: bottom-animation 0.6s;
 }
 .fromAreasTabsContainer.activeBlog {
     position: fixed;
@@ -4801,6 +4811,12 @@ header {
     flex-direction: column-reverse;
     align-items: center;
     padding-top: 50px !important;
+    transform: translateY(0) !important;
+    animation: bottom-animation 0.6s;
+}
+.fromAreasTabsContainerRight {
+    position: static !important;
+    justify-content: flex-start;
 }
 }
 @media (max-width: 576px) {
